--- a/src/search.css
+++ b/src/search.css
@@ -1,12 +1,11 @@
-.navbar {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
+* {
+	box-sizing: border-box;
+	margin: 0;
+    padding: 0;
 }
-
-.genreList {
+body{
+	background-color: #f4f4f4;
 }
-
 ul{	
 	list-style-type: none;
 }
@@ -16,4 +15,99 @@ ul li a {
 
 button {
     padding: 1em;
+}
+
+.navbar {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+}
+
+.trackGallery{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+}
+
+.trackDetails {
+	width: 214px;
+	height: 132px;
+	background: #FFFFFF;
+	margin-bottom: 1em;
+	position: relative;
+	padding: 15px 10px 0px 10px;
+	border: 1px solid #E3E3E3;
+}
+
+.trackImg{
+	display: block;
+    width: 100%;
+    height: 70px;
+    margin-top: -5px;
+    margin-bottom: 10px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.overlay{
+	display: flex;
+	position: relative;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;	
+    transition: .5s all ease;
+	opacity: 0;
+}
+
+.playIcon{
+	font-size: 1.5em;
+	color: #A6CFD5;
+}
+
+.trackText {
+	position: relative;
+	margin-top: 1.3em;
+	bottom: 1em;
+}
+
+.userAvatar{
+	border-radius: 0%;
+	width: 30px;
+	display: block;
+    margin-right: 10px;
+    float: left;
+}
+
+.userName{
+	font-size: 12px;
+	display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+	color: #3381b7;
+}
+
+.songTitle{
+	font-size: 12px;
+	display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+	color: black;
+}
+
+/** Interactive Effects **/
+.trackImg:hover{
+	cursor: pointer;
+}
+.userName:hover, .songTitle:hover{
+	text-decoration: underline;
+}
+
+.overlay:hover{
+	background-color: rgba(0,0,0,.7);	
+	transition: .5s all ease;
+	opacity: 1;
 }
