--- a/src/search.css
+++ b/src/search.css
@@ -1,113 +1,112 @@
 * {
-	box-sizing: border-box;
-	margin: 0;
-    padding: 0;
-}
-body{
-	background-color: #f4f4f4;
-}
-ul{	
-	list-style-type: none;
-}
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
+body {
+  background-color: #f4f4f4; }
+
+ul {
+  list-style-type: none; }
+
 ul li a {
-	text-decoration: none;
-}
+  text-decoration: none; }
 
 button {
-    padding: 1em;
-}
+  padding: 1em; }
 
+/*Base CSS Props*/
+.textOverflow, .trackText .userName, .trackText .songTitle {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: wrap;
+  text-align: left;
+  font-size: 14px; }
+
+.menuItem, .navbar .genreList .loginItem, .navbar .genreList .genreItem, .navbar .genreList .navItem {
+  cursor: pointer;
+  background-color: white;
+  padding: 15px;
+  border-left: 1px solid #E3E3E3;
+  text-transform: uppercase;
+  justify-content: center; }
+
+/*Gallery Results Layout*/
 .navbar {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-}
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  margin-bottom: 1em; }
+  .navbar .genreList .textInput {
+    padding: 15px; }
 
-.trackGallery{
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-around;
-}
+.trackGallery {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around; }
 
 .trackDetails {
-	width: 214px;
-	height: 132px;
-	background: #FFFFFF;
-	margin-bottom: 1em;
-	position: relative;
-	padding: 15px 10px 0px 10px;
-	border: 1px solid #E3E3E3;
-}
+  width: 300px;
+  height: 300px;
+  background: #FFFFFF;
+  margin-bottom: 1em;
+  position: relative;
+  padding: 15px 10px 0px 10px;
+  border: 1px solid #E3E3E3; }
 
-.trackImg{
-	display: block;
-    width: 100%;
-    height: 70px;
-    margin-top: -5px;
-    margin-bottom: 10px;
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.overlay{
-	display: flex;
-	position: relative;
+.trackImg {
+  display: block;
+  width: 100%;
+  height: 100px;
+  margin-top: -5px;
+  margin-bottom: 10px;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 1px solid #E3E3E3; }
+  .trackImg .overlay {
+    display: flex;
+    position: relative;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;	
+    height: 100%;
     transition: .5s all ease;
-	opacity: 0;
-}
-
-.playIcon{
-	font-size: 1.5em;
-	color: #A6CFD5;
-}
+    opacity: 0; }
+    .trackImg .overlay .playIcon {
+      font-size: 1.5em;
+      color: #A6CFD5; }
 
 .trackText {
-	position: relative;
-	margin-top: 1.3em;
-	bottom: 1em;
-}
-
-.userAvatar{
-	border-radius: 0%;
-	width: 30px;
-	display: block;
+  position: relative;
+  margin-top: 22px;
+  bottom: 1em; }
+  .trackText .userAvatar {
+    border-radius: 0%;
+    width: 55px;
+    display: block;
     margin-right: 10px;
-    float: left;
-}
-
-.userName{
-	font-size: 12px;
-	display: block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-	color: #3381b7;
-}
-
-.songTitle{
-	font-size: 12px;
-	display: block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-	color: black;
-}
+    float: left; }
+  .trackText .userName {
+    color: #3381b7;
+    padding-top: 1px; }
+  .trackText .songTitle {
+    color: black; }
 
 /** Interactive Effects **/
-.trackImg:hover{
-	cursor: pointer;
-}
-.userName:hover, .songTitle:hover{
-	text-decoration: underline;
-}
+.trackImg:hover {
+  cursor: pointer; }
 
-.overlay:hover{
-	background-color: rgba(0,0,0,.7);	
-	transition: .5s all ease;
-	opacity: 1;
-}
+.userName:hover, .songTitle:hover {
+  text-decoration: underline; }
+
+.overlay:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+  transition: .5s all ease;
+  opacity: 1; }
+
+.genreItem:hover {
+  border-bottom: #0000cc; }
+
+/*# sourceMappingURL=search.css.map */
