--- a/src/search.css
+++ b/src/search.css
@@ -20,7 +20,7 @@ button {
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: wrap;
+  white-space: nowrap;
   text-align: left;
   font-size: 14px; }
 
@@ -35,11 +35,14 @@ button {
 /*Gallery Results Layout*/
 .navbar {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: space-around;
   margin-bottom: 1em; }
-  .navbar .genreList .textInput {
-    padding: 15px; }
+  .navbar .genreList {
+    display: flex;
+    flex-flow: row wrap; }
+    .navbar .genreList .textInput {
+      padding: 15px; }
 
 .trackGallery {
   display: flex;
@@ -58,7 +61,7 @@ button {
 .trackImg {
   display: block;
   width: 100%;
-  height: 100px;
+  height: 175px;
   margin-top: -5px;
   margin-bottom: 10px;
   background-position: 50%;
@@ -84,7 +87,7 @@ button {
   bottom: 1em; }
   .trackText .userAvatar {
     border-radius: 0%;
-    width: 55px;
+    width: 50px;
     display: block;
     margin-right: 10px;
     float: left; }
@@ -108,5 +111,10 @@ button {
 
 .genreItem:hover {
   border-bottom: #0000cc; }
+
+audio {
+  width: 100%;
+  bottom: 7px;
+  position: relative; }
 
 /*# sourceMappingURL=search.css.map */
