--- a/src/search.css
+++ b/src/search.css
@@ -76,7 +76,10 @@ button {
     width: 100%;
     height: 100%;
     transition: .5s all ease;
-    opacity: 0; }
+    opacity: 0; 
+    font-size: 2em;
+    color: white;
+  }
     .trackImg .overlay .playIcon {
       font-size: 1.5em;
       color: #A6CFD5; }
