--- a/src/search.css
+++ b/src/search.css
@@ -52,6 +52,7 @@ button {
     left: 0;
     right: 0;
     width: 100%;
+    border-radius: 0;
 }
 
 input[type="text"] {
@@ -141,10 +142,12 @@ button.btn.btn-primary {
   border-bottom: #0000cc; }
 
 audio {
-      width: 100%;
+     width: 100%;
     bottom: 0em;
     position: fixed;
-    z-index: 9999; }
+    z-index: 9999;
+    left: 0;
+    right: 0; }
 
 
 
