--- a/src/search.css
+++ b/src/search.css
@@ -24,10 +24,18 @@ button {
   border: 5px solid white;
   box-sizing: content-box;
 }
-.card-body{
-  background-size: cover !important;
-  background-position: center !important;
-  background-repeat: no-repeat !important;
+.cardBodyImage{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.2;
+    width: 100%;
+    height: 100%;
+    background-size: cover !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
 }
 
 /*Base CSS Props*/
